--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.543.0",
     "next": "^15.5.2",
+    "next-themes": "^0.4.6",
     "prisma": "^6.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7"
   },
